# sized-grid

./: .gitignore  sized-grid.cabal  stack.yaml
gameOfLife/: gameOfLife.cabal  stack.yaml
gameOfLife/src/: Main.hs
src/SizedGrid/: Coord.hs  Ordinal.hs
src/SizedGrid/Coord/: Class.hs  HardWrap.hs  Periodic.hs
src/SizedGrid/Grid/: Focused.hs  Grid.hs
