name: sized-grid
version: 0.2.0.2
cabal-version: >=1.10
category: Data
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: ed@wastell.co.uk
bug-reports: https://github.com/edwardwas/sized-grid/issues
synopsis: Multidimensional grids with sized specified at compile time
author: edwardwas
homepage: https://github.com/edwardwas/sized-grid
description:
  `size-grid` allows you to make finite sized grids and have their size and shape confirmed at compile time
  .
  Consult the readme for a short tutorial and explanation.
extra-source-files:
    ChangeLog.md
    README.lhs
    README.md

source-repository head
  type: git
  location: https://github.com/edwardwas/sized-grid

library
    exposed-modules:
        SizedGrid.Ordinal
        SizedGrid.Coord
        SizedGrid.Coord.Class
        SizedGrid.Coord.Periodic
        SizedGrid.Coord.HardWrap
        SizedGrid.Grid.Class
        SizedGrid.Grid.Grid
        SizedGrid.Grid.Focused
        SizedGrid
    build-depends:
        base,
        adjunctions,
        aeson ,
        comonad,
        constraints,
        distributive,
        generics-sop ,
        lens ,
        mtl ,
        random,
        vector,
        vector-space
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

test-suite  tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        base,
        HUnit,
        aeson,
        adjunctions,
        generics-sop,
        lens,
        sized-grid,
        tasty,
        tasty-hunit,
        vector ,
        vector-space,
        QuickCheck ,
        tasty-quickcheck
    default-language: Haskell2010
    hs-source-dirs: tests
    other-modules:
        Test.Utils
        Test.Shrink

-- test-suite  readme
--     type: exitcode-stdio-1.0
--     main-is: README.lhs
--     build-depends:
--         base >=4.9 && <4.13,
--         ansi-terminal >=0.8.0.2 && <0.10,
--         adjunctions >= 4.3 && < 4.5,
--         comonad >=5.0 && <5.1,
--         distributive >=0.5 && <1,
--         lens >=4.15 && <5,
--         markdown-unlit >=0.5.0 && <0.6,
--         sized-grid -any,
--         vector-space >=0.10 && < 2
--     default-language: Haskell2010
--     ghc-options: -pgmL markdown-unlit
